--- a/src/main/resources/static/pages/sys/user/updateUser.html
+++ b/src/main/resources/static/pages/sys/user/updateUser.html
@@ -39,21 +39,6 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label">生日</label>
-                <div class="col-xs-2">
-                  <input type="text" class="form-control" placeholder="生日" id="birthday" name='birthday'>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label">性别</label>
-                <div class="col-md-10" style="width: 100px">
-                    <select class="form-control input-sm" name="sex" id="sex">
-                        <option value="1">男</option>
-                        <option value="0">女</option>
-                    </select>
-                </div>
-            </div>
-            <div class="form-group">
                 <label class="col-md-2 control-label">状态</label>
                 <div class="col-md-10" style="width: 100px">
                     <select class="form-control input-sm" name="status" id="status">
@@ -66,6 +51,13 @@
 			<div class="form-group">
 				<label class="col-md-2 control-label">角色</label>
 				<div class="checkbox" id="roles">
+				</div>
+			</div>
+			
+			<div class="form-group">
+				<label class="col-md-2 control-label">公司</label>
+				<div class="col-md-10 form-inline">
+					<select class="selectpicker show-tick form-control" data-live-search="true" name="customerId" id="customer" ></select>
 				</div>
 			</div>
 
@@ -99,7 +91,7 @@
 	});
 	
 	initRoles();
-	
+	initCustomers();
 	initData();
 	
 	function initData(){
@@ -119,6 +111,7 @@
 					$("#birthday").val(data.birthday);
 					$("#sex").val(data.sex);
 					$("#status").val(data.status);
+					$("#customer").val(data.customerId);
 				}
 			});
 			
@@ -147,6 +140,23 @@
 					layer.msg("修改成功", {shift: -1, time: 1000}, function(){
                         location.href = "userList.html";
                     });
+				}
+			});
+		}
+		
+		function initCustomers() {
+
+			$.ajax({
+				type : 'get',
+				url : '/customer/getAllCustomer',
+				async : false,
+				success : function(data) {
+					var select = $("#customer");
+
+					for (var i = 0; i < data.length; i++) {
+						var v = data[i];
+						select.append("<option value='" + v.id + "'>" + v.name + "</option>")
+					}
 				}
 			});
 		}
