监测类型，测点类型

--- a/src/main/resources/static/pages/bsd/deviceList.html
+++ b/src/main/resources/static/pages/bsd/deviceList.html
@@ -28,8 +28,8 @@
 			</div>
 		</div>
 	
-		<div style="width: 210px;float: left;">
-			<ul id="treeDevice" class="ztree"></ul>
+		<div style="width: 210px;float: left;height: 580px;">
+			<ul id="treeDevice" class="ztree" style="height: 567px;"></ul>
 		</div>
 	    <div style="float: left;margin-left: 10px;width:calc(100% - 220px)">
 			<form class="form-horizontal" onsubmit="return false" id="form">
