--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 	    <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
 	    <meta name="apple-mobile-web-app-capable" content="yes">
 	    <meta name="format-detection" content="telephone=no">
-		<title>配用电检测系统</title>
+		<title>昊美智慧能源监管系统</title>
 		<link rel="stylesheet" href="layui/css/layui.css" media="all" />
 		<link rel="stylesheet" href="layui/css/global.css" media="all" />
 		<link rel="stylesheet" href="css/font-awesome/css/font-awesome.css" media="all" />
@@ -22,8 +22,8 @@
 			<div class="layui-header header header-demo">
                 <div class="layui-main">
 					<div class="admin-login-box">
-						<a class="logo" style="left: 0;" href="/">
-							<span style="font-size: 20px;color: white;">配用电检测管理系统</span>
+						<a class="logo" style="left: 0;width: 215px;" href="/">
+							<span style="font-size: 20px;color: white;">昊美智慧能源监管系统</span>
 						</a>
 					<div class="admin-side-toggle">
 							<i class="fa fa-bars" aria-hidden="true"></i>
